--- a/scenarios/polygon-chain/latency-spike-l1-rpc.yaml
+++ b/scenarios/polygon-chain/latency-spike-l1-rpc.yaml
@@ -20,7 +20,7 @@ spec:
   warmup: 1m
   cooldown: 1m
 
-  # Add 500ms latency with 100ms jitter to all RPC traffic
+  # Add 500ms latency to all RPC traffic
   faults:
     - phase: slow_l1_rpc
       description: Add significant latency to L1 RPC responses
@@ -29,7 +29,6 @@ spec:
       params:
         device: eth0
         latency: 500
-        jitter: 100
         target_ports: "8545,8546"
         target_proto: tcp
 
