feat: regex pattern match for rpc detection
Signed-off-by: Ji Hwan <jkim@polygon.technology>

--- a/scenarios/polygon-chain/latency-spike-l1-rpc.yaml
+++ b/scenarios/polygon-chain/latency-spike-l1-rpc.yaml
@@ -13,7 +13,7 @@ spec:
     - selector:
         type: kurtosis_service
         enclave: "${ENCLAVE_NAME}"
-        pattern: "el-1-geth"
+        pattern: "el-\\d+-geth"
       alias: l1_rpc_node
 
   duration: 10m
