feat: cpu/memory resource stress tests
Signed-off-by: Ji Hwan <jkim@polygon.technology>

--- a/Dockerfile.chaos-utils
+++ b/Dockerfile.chaos-utils
@@ -26,6 +26,7 @@ RUN apt-get update && apt-get install -y \
     busybox \
     wget \
     gnupg \
+    stress-ng \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Envoy
